                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 06-07-2005 added: alternative nav sound skin in xbmc/sounds directory (selectable in appearance settings)
 - 06-07-2005 updated: Polish language file (Thnx to napek)
 - 06-07-2005 updated: Norwegian language file (Thnx to vnm)
 - 06-07-2005 updated: Korean language file (Thnx to AkoXko)
 - 06-07-2005 updated: Italian language file (Thnx to kotix)
 - 06-07-2005 updated: German (Austrian) language file (Thnx to CEOMR)
 - 06-07-2005 updated: Chinese (Simple) language file (Thnx to hibaby)
 - 06-07-2005 added: wavpack codec for paplayer (needs wavpack.dll in system\players\paplayer)
 - 06-07-2005 added: advanced codec info for the aaccodec (aaccodec.dll in system\players\paplayer got updated)
 - 06-07-2005 fixed: the dvdplayer did crash sometimes while seeking
 - 06-07-2005 fixed: some dvd navigating issues, stills should be displayed better now
 - 06-07-2005 fixed: Thumb/List control page up/down problems.
 - 05-07-2005 fixed: Video OSD open/close crash.
 - 05-07-2005 changed: Default <colorkey> changed to zero.  (Makes more sense)
 - 05-07-2005 changed: Order of context menu items.
 - 04-07-2005 added: Xbox2Xbox Copy! Well this feature is: Autodetection+FTP Client! ;) [GeminiServer]
 - 04-07-2005 added: XBMC FTP Client [GeminiServer]
                     This is a Simple FTP Client for XBMC [based on 1179655].You can connect to all FTP Servers in LAN and Internet!
                     You can ATM only Download from a FTP server, Upload, delete Files/Folders are not supportted yet![will come!]
		     You can set any where you want a share with the following format: ftp://USER:PASS@IP:PORT/FOLDER!