@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 06-07-2005 added: <visible> tag to windows.  Allows skinners to specify when a dialog should be displayed.  Only works with <type>dialog</type>.
  - 06-07-2005 added: alternative nav sound skin in xbmc/sounds directory (selectable in appearance settings)
  - 06-07-2005 updated: Polish language file (Thnx to napek)
  - 06-07-2005 updated: Norwegian language file (Thnx to vnm)
